--- a/public/auth/otp.html
+++ b/public/auth/otp.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ur">
 <head>
 <meta charset="UTF-8">
 <title>OTP Verification | AlinGo</title>
@@ -37,9 +37,17 @@ body{
   text-align:center;
 }
 
+.logo{
+  margin-bottom:10px;
+}
+
+.logo img{
+  width:90px;
+}
+
 h1{
   font-size:20px;
-  margin-bottom:6px;
+  margin:6px 0;
 }
 
 p{
@@ -70,13 +78,9 @@ button{
   cursor:pointer;
 }
 
-/* OTP */
-.otp{
-  letter-spacing:6px;
-  font-size:22px;
-  margin-top:10px;
-  color:var(--indigo);
-  font-weight:700;
+button.secondary{
+  background:#e5e7eb;
+  color:#0f172a;
 }
 
 .hidden{display:none}
@@ -84,13 +88,13 @@ button{
 .success{
   color:var(--green);
   font-size:14px;
-  margin-top:10px;
+  margin-top:12px;
 }
 
 .error{
   color:var(--red);
   font-size:13px;
-  margin-top:10px;
+  margin-top:12px;
 }
 </style>
 </head>
@@ -99,20 +103,23 @@ button{
 
 <div class="card">
 
-  <h1>🔐 Verify Your Account</h1>
-  <p>Enter your mobile number to receive OTP</p>
+  <div class="logo">
+    <img src="/LOGO.JPG" alt="AlinGo">
+  </div>
+
+  <h1>اکاؤنٹ کی تصدیق</h1>
+  <p>اپنا موبائل نمبر درج کریں</p>
 
   <!-- STEP 1 -->
   <div id="step1">
     <input type="tel" id="mobile" placeholder="03XXXXXXXXX">
-    <button onclick="sendOTP()">Send OTP</button>
+    <button onclick="sendOTP()">OTP بھیجیں</button>
   </div>
 
   <!-- STEP 2 -->
   <div id="step2" class="hidden">
-    <div class="otp" id="showOtp"></div>
-    <input type="number" id="otpInput" placeholder="Enter OTP">
-    <button onclick="verifyOTP()">Verify</button>
+    <input type="number" id="otpInput" placeholder="OTP درج کریں">
+    <button onclick="verifyOTP()">تصدیق کریں</button>
   </div>
 
   <!-- RESULT -->
@@ -121,37 +128,79 @@ button{
 </div>
 
 <script>
-let generatedOTP = "";
-let userId = "";
+async function sendOTP(){
+  const mobile = document.getElementById("mobile").value.trim();
 
-function sendOTP(){
-  const mobile = document.getElementById("mobile").value;
   if(mobile.length < 10){
-    alert("Enter valid mobile number");
+    showError("درست موبائل نمبر درج کریں");
     return;
   }
 
-  generatedOTP = Math.floor(100000 + Math.random() * 900000).toString();
-  userId = "AL-" + Math.floor(10000 + Math.random()*90000);
+  try{
+    const res = await fetch("/api/otp", {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({ mobile })
+    });
 
-  document.getElementById("showOtp").innerText = generatedOTP;
-  document.getElementById("step1").classList.add("hidden");
-  document.getElementById("step2").classList.remove("hidden");
+    const data = await res.json();
+
+    if(!res.ok){
+      showError(data.error || "OTP بھیجنے میں مسئلہ");
+      return;
+    }
+
+    document.getElementById("step1").classList.add("hidden");
+    document.getElementById("step2").classList.remove("hidden");
+    showSuccess("OTP بھیج دیا گیا ہے");
+
+  }catch(e){
+    showError("سرور سے رابطہ نہیں ہو سکا");
+  }
 }
 
-function verifyOTP(){
-  const entered = document.getElementById("otpInput").value;
-  if(entered === generatedOTP){
-    document.getElementById("step2").classList.add("hidden");
-    document.getElementById("result").innerHTML =
-      `<div class="success">
-        ✅ Verified Successfully<br>
-        <b>Your ID:</b> ${userId}
-      </div>`;
-  }else{
-    document.getElementById("result").innerHTML =
-      `<div class="error">❌ Invalid OTP</div>`;
+async function verifyOTP(){
+  const mobile = document.getElementById("mobile").value.trim();
+  const otp = document.getElementById("otpInput").value.trim();
+
+  if(otp.length !== 6){
+    showError("6 ہندسوں کا OTP درج کریں");
+    return;
   }
+
+  try{
+    const res = await fetch("/api/otp", {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({ mobile, otp })
+    });
+
+    const data = await res.json();
+
+    if(!res.ok){
+      showError(data.error || "OTP غلط ہے");
+      return;
+    }
+
+    showSuccess(
+      "✅ تصدیق مکمل ہو گئی<br>آپ کی آئی ڈی: <b>" + data.userId + "</b>"
+    );
+
+    document.getElementById("step2").classList.add("hidden");
+
+  }catch(e){
+    showError("تصدیق میں مسئلہ آیا");
+  }
+}
+
+function showSuccess(msg){
+  document.getElementById("result").innerHTML =
+    `<div class="success">${msg}</div>`;
+}
+
+function showError(msg){
+  document.getElementById("result").innerHTML =
+    `<div class="error">${msg}</div>`;
 }
 </script>
 
