--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,49 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ur">
 <head>
-<meta charset="UTF-8">
-<title>AlinGo</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="css/main.css">
+  <meta charset="UTF-8">
+  <title>AlinGo</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <link rel="stylesheet" href="/css/style.css">
+  <link rel="icon" href="/favicon.ico">
 </head>
 
 <body>
 
 <!-- SPLASH -->
 <div id="splash">
-  <div class="splash-border"></div>
-  <img src="assets/LOGO.JPG" class="splash-logo">
-  <div id="emoji-fall"></div>
+  <div class="splash-box">
+    <img src="/assets/LOGO.JPG" alt="AlinGo Logo">
+  </div>
 </div>
 
 <!-- HOME -->
 <div id="home">
 
-  <header class="brand">
-    <h1><span class="alin">Alin</span><span class="go">Go</span></h1>
-    <p>Everything you need · go<span class="dots">...</span></p>
-  </header>
+  <div class="brand">
+    <span class="alin">Alin</span><span class="go">Go</span>
+    <div class="tagline">Move smart · Live free</div>
+  </div>
 
   <div class="disk-wrap">
-    <div class="disk-back"></div>
-    <div class="disk-front">
-      <img src="assets/LOGO.JPG">
+    <div class="disk back"></div>
+    <div class="disk front">
+      <img src="/assets/LOGO.JPG" alt="logo">
     </div>
   </div>
 
-  <div class="home-actions">
-    <a href="dashboard.html" class="btn primary">Open Dashboard</a>
-    <a href="#" class="btn secondary">Become Partner</a>
+  <div class="services">
+    <div class="service">🚕<span>Ride</span></div>
+    <div class="service">🍔<span>Food</span></div>
+    <div class="service">🛒<span>Shop</span></div>
+    <div class="service">✈️<span>Travel</span></div>
+    <div class="service">📦<span>Courier</span></div>
+    <div class="service">🎟️<span>Tickets</span></div>
   </div>
 
 </div>
 
-<script src="js/main.js"></script>
+<script src="/js/main.js"></script>
 </body>
 </html>
