--- a/public/ride/ride-home.html
+++ b/public/ride/ride-home.html
@@ -1,14 +1,9 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Ride Home | Alingo</title>
-</head>
 <body>
 
-<h2>Welcome to Alingo Ride Service</h2>
-
-<button onclick="window.location.href='ride-book.html'">Book a Ride</button>
-<button onclick="window.location.href='ride-history.html'">My Rides</button>
+<h3>Ride</h3>
+<button onclick="location.href='ride-book.html'">Book Ride</button>
 
 </body>
 </html>
