--- a/public/ride/ride-home.html
+++ b/public/ride/ride-home.html
@@ -1,9 +1,56 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <title>Ride Home | AlinGo</title>
+</head>
 <body>
 
-<h3>Ride</h3>
+<h2>Welcome to Ride Module</h2>
+
+<!-- User Greeting -->
+<p id="greet"></p>
+
+<!-- Current Rides -->
+<h3>Your Rides:</h3>
+<ul id="rideList"></ul>
+
+<!-- Book Ride Button -->
 <button onclick="location.href='ride-book.html'">Book Ride</button>
+
+<script>
+async function init(){
+  const token = localStorage.getItem("token");
+  if(!token){
+    alert("Please login first");
+    location.href="/login.html";
+    return;
+  }
+
+  // Decode token to show user (optional)
+  const payload = JSON.parse(atob(token.split('.')[1]));
+  document.getElementById("greet").innerText = "Hello, User!";
+
+  // Fetch current rides
+  const res = await fetch("/api/ride/my", {
+    headers:{ "Authorization":"Bearer "+token }
+  });
+  const data = await res.json();
+
+  const list = document.getElementById("rideList");
+  list.innerHTML = "";
+  if(data.length === 0){
+    list.innerHTML = "<li>No rides yet</li>";
+  } else {
+    data.forEach(r=>{
+      const li = document.createElement("li");
+      li.innerText = `${r.pickup} → ${r.drop} | Status: ${r.status}`;
+      list.appendChild(li);
+    });
+  }
+}
+
+init();
+</script>
 
 </body>
 </html>
